--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://benscofield.com/"
+baseURL = "https://benscofield.com/"
 languageCode = "en-us"
 defaultContentLanguage = "en"
 title = "Ben Scofield"
