--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-material-blog"]
 	path = themes/hugo-material-blog
 	url = https://github.com/Xzya/hugo-material-blog.git
+[submodule "themes/hugo-vitae"]
+	path = themes/hugo-vitae
+	url = https://github.com/datacobra/hugo-vitae.git
