Disable smart quotes

--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,7 @@ paginate = 8
 title = "Ben Scofield"
 theme = "hugo-vitae"
 googleAnalytics = "UA-891855-6"
+smartypants = false
 
 [author]
   name = "Ben Scofield"
