--- a/config.toml
+++ b/config.toml
@@ -37,7 +37,7 @@ cmd = "https://twitter.com/bscofield"
 [[params.social]]
 name = "Email"
 icon = "fas fa-envelope"
-cmd = "mailto:me@benscofield..com"
+cmd = "mailto:benscofield@turrean.com"
 
 [[params.social]]
 name = "RSS"
